# arnold-usd

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  NAMING_CONVENTIONS.md  README.md  SConstruct  SECURITY.md  abuild  abuild.bat  arnold_usd.h.in  clang_format  plugInfo.json
apis/: CMakeLists.txt  __init__.py  api.h  generatedSchema.usda  lightFilterAPI.cpp  lightFilterAPI.h  light_filter_api.cpp  light_filter_api.h  module.cpp  module_deps.cpp  schema.usda  wrapLightFilterAPI.cpp
docs/: CMakeLists.txt  Doxyfile  building.md  conventions.md  documenting.md  naming_conventions.md
docs/cla/: Arnold components for USD - Corp Contrib Agmt.docx  Arnold components for USD - Ind Contrib Agmt.docx
katana/: CMakeLists.txt  SConscript  api.h  material.cpp  material.h  op.cpp
libs/common/: CMakeLists.txt  SConscript  api_adapter.h  common_bits.h  common_utils.cpp  common_utils.h  constant_strings.cpp  constant_strings.h  diagnostic_utils.cpp  diagnostic_utils.h  materials_utils.cpp  materials_utils.h  parameters_utils.cpp  parameters_utils.h  procedural_reader.cpp  procedural_reader.h  rendersettings_utils.cpp  rendersettings_utils.h  shape_utils.cpp  shape_utils.h  timesettings.h  trace_utils.cpp  trace_utils.h
libs/render_delegate/: CMakeLists.txt  SConscript  api.h  basis_curves.cpp  basis_curves.h  camera.cpp  camera.h  config.cpp  config.h  debug_codes.cpp  debug_codes.h  dependenciesSIP.cpp  dependenciesSIP.h  dependencyForwardingSIP.cpp  dependencyForwardingSIP.h  extComputationPrimvarPruningSIP.cpp  extComputationPrimvarPruningSIP.h  fixInvalidationSIP.cpp  fixInvalidationSIP.h  fixMaterialPruningSIP.cpp  fixMaterialPruningSIP.h  fixPropagatedPrototypesVisibilitySIP.cpp  fixPropagatedPrototypesVisibilitySIP.h  gaussian_splat.cpp  gaussian_splat.h  hdarnold.h  implicitSurfaceSIP.cpp  implicitSurfaceSIP.h  instancer.cpp  instancer.h  light.cpp  light.h  lightLinkingSIP.cpp  mesh.cpp  mesh.h  native_rprim.cpp  native_rprim.h  node_graph.cpp  node_graph.h  nurbsApproximatingSIP.cpp  (+31 more)
libs/translator/: CMakeLists.txt  SConscript
ndr/: CMakeLists.txt  SConscript  __init__.py  api.h  discovery.cpp  discovery.h  ndrarnold.h  parser.cpp  parser.h  plugInfo.json.in  tokens.cpp  tokens.h  utils.cpp  utils.h  wrapParser.cpp
plugins/: CMakeLists.txt
plugins/bundle/: CMakeLists.txt
plugins/ndr/: CMakeLists.txt  SConscript  api.h  discovery.cpp  discovery.h  ndrarnold.h  parser.cpp  parser.h  plugInfo.json.in  tokens.cpp  tokens.h  utils.cpp
plugins/node_registry/: CMakeLists.txt  SConscript  __init__.py  discovery.cpp  discovery.h  ndrarnold.h  parser.cpp  parser.h  plugInfo.json.in  tokens.cpp  tokens.h  utils.cpp  utils.h
plugins/procedural/: CMakeLists.txt  SConscript  asset_utils.cpp  asset_utils.h  main.cpp  plugin.map
plugins/render_delegate/: CMakeLists.txt  SConscript  plugInfo.json.in  renderer_plugin.cpp  renderer_plugin.h
plugins/scene_delegate/: CMakeLists.txt  SConscript  adapter_registry.cpp  adapter_registry.h  api.h  delegate.cpp  delegate.h  delegate_proxy.cpp  delegate_proxy.h  persp_camera_adapter.cpp  persp_camera_adapter.h  plugInfo.json.in  polymesh_adapter.cpp  polymesh_adapter.h  prim_adapter.cpp  prim_adapter.h  rprim_adapter.cpp  rprim_adapter.h
plugins/scene_index/: CMakeLists.txt  SConscript  api.h  dependenciesSIP.cpp  dependenciesSIP.h  dependencyForwardingSIP.cpp  dependencyForwardingSIP.h  extComputationPrimvarPruningSIP.cpp  extComputationPrimvarPruningSIP.h  fixInvalidationSIP.cpp  fixInvalidationSIP.h  fixMaterialPruningSIP.cpp  fixPropagatedPrototypesVisibilitySIP.cpp  fixPropagatedPrototypesVisibilitySIP.h  implicitSurfaceSIP.cpp  implicitSurfaceSIP.h  instanceLightLinkingSIP.cpp  instanceLightLinkingSIP.h  lightLinkingSIP.cpp  meshLightResolvingSIP.cpp  meshLightResolvingSIP.h  mtoaSIP.cpp  mtoaSIP.h  nurbsApproximatingSIP.cpp  nurbsApproximatingSIP.h  plugInfo.json.in  propagateDirtyPrimsSIP.cpp  propagateDirtyPrimsSIP.h  renderPassSIP.cpp  renderPassSIP.h
plugins/sdr/: CMakeLists.txt  SConscript  __init__.py  api.h  discovery.cpp  discovery.h  parser.cpp  parser.h  plugInfo.json.in  tokens.cpp  (+3 more)
procedural/: CMakeLists.txt  SConscript  macos_export_list  macos_export_list_no_scene  macos_export_list_shared  main.cpp
render_delegate/: CMakeLists.txt  SConscript  api.h  basis_curves.cpp  basis_curves.h  camera.cpp  camera.h  config.cpp  config.h  constant_strings.cpp  constant_strings.h  debug_codes.cpp  debug_codes.h  gprim.h  hdarnold.h  instancer.cpp  instancer.h  light.cpp  light.h  material.cpp  material.h  material_tracker.cpp  material_tracker.h  mesh.cpp  mesh.h  native_rprim.cpp  native_rprim.h  node_graph.cpp  node_graph.h  node_graph_tracker.cpp  node_graph_tracker.h  openvdb_asset.cpp  openvdb_asset.h  points.cpp  points.h  render_buffer.cpp  render_buffer.h  render_delegate.cpp  render_delegate.h  render_param.cpp  (+12 more)
riddick/: CMakeLists.txt  SConscript  main.cpp  privateSceneDelegate.h  renderOptions.cpp  renderOptions.h  renderer.cpp  renderer.h
scene_delegate/: CMakeLists.txt  SConscript  adapter_registry.cpp  adapter_registry.h  api.h  delegate.cpp  delegate.h  delegate_proxy.cpp  delegate_proxy.h  mesh_adapter.cpp  mesh_adapter.h  persp_camera_adapter.cpp  persp_camera_adapter.h  plugInfo.json.in  polymesh_adapter.cpp  polymesh_adapter.h  prim_adapter.cpp  prim_adapter.h  rprim_adapter.cpp  rprim_adapter.h  scene_delegate.cpp  scene_delegate.h
schemas/: CMakeLists.txt  SConscript  __init__.py  createSchemaFile.py  moduleDeps.cpp  updatePlugInfo.py
translator/: CMakeLists.txt  SConscript
usd_imaging/: CMakeLists.txt  SConscript  api.h  arnold_mesh_light_adapter.cpp  arnold_mesh_light_adapter.h  light_adapter.cpp  light_adapter.h  light_filter_api_adapter.cpp  light_filter_api_adapter.h  material_param_utils.cpp  material_param_utils.h  native_gprim_adapter.cpp  native_gprim_adapter.h  node_graph_adapter.cpp  node_graph_adapter.h  plugInfo.json.in  shape_adapter.cpp  shape_adapter.h  shape_adapters.cpp.in  usd_lux_light_filter_adapter.cpp  usd_lux_light_filter_adapter.h
(+2006 files in other folders)
